changed Arabic alignment, fixed double dots position

--- a/src/components/Form/Form.styles.scss
+++ b/src/components/Form/Form.styles.scss
@@ -1,6 +1,7 @@
 .form {
     &__output {
-        height: 150px;
+        height: 50vh;
+        width: 48%;
         overflow: auto;
         border-radius: 4px;
         border: 1px solid rgba(0, 0, 0, 0.23);
